complete navigation bar (html - css)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
                         <a class="nav-link" href="#">Link</a>
                     </li>
                 </ul>
+                <ul class="nav book-mark-ul">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Active</a>
+                    </li>
+                    <div class="book-mark-div">
+                        <div class="book-mark"></div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </div>
+                </ul>
             </div>
         </div>
     </nav>
